@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: config.scm.in,v 1.16.2.2 2006/12/29 11:19:52 bizenn Exp $
+;; $Id: config.scm.in,v 1.16.2.3 2007/06/13 03:50:42 bizenn Exp $
 ;;
 ;; This is intended to be loaded by kahua servers to share common
 ;; configuration parameters.
@@ -49,6 +49,8 @@
 	  kahua-auto-restart
 	  kahua-secure-sandbox
 	  kahua-spvr-concurrency
+	  kahua-httpd-concurrency
+	  kahua-keyserv-concurrency
           kahua-config-file
 
 	  ;; Utilities
@@ -145,6 +147,10 @@
 		  :init-value "##localstatedir##/user.conf" :place :site)
 
    (spvr-concurrency :init-keyword :spvr-concurrency :init-value 10)
+
+   (httpd-concurrency :init-keyword :httpd-concurrency :init-value 10)
+
+   (keyserv-concurrency :init-keyword :keyserv-concurrency :init-value 10)
 
    ;; internal
    (user-mode :init-value #f)
@@ -272,6 +278,8 @@
 	      userconf-file
 	      secure-sandbox
 	      spvr-concurrency
+	      httpd-concurrency
+	      keyserv-concurrency
 	      config-file)
 
 ;; Utilities
